--- a/index.html
+++ b/index.html
@@ -677,11 +677,8 @@
       <h1>Kazuto Kimura</h1>
       <p class="subtitle">Web Developer / Software Engineer</p>
       <div class="hero-tags">
-        <span>JavaScript</span>
-        <span>TypeScript</span>
-        <span>React</span>
-        <span>Node.js</span>
-        <span>Python</span>
+        <span>Vue.js</span>
+        <span>Ruby on Rails</span>
       </div>
       <button class="hero-btn" id="helloBtn">
         <span class="btn-icon">👋</span> Say Hello!
@@ -696,7 +693,7 @@
     <section class="card about fade-up">
       <h2>About Me</h2>
       <p>
-        はじめまして、木村和人です。ソフトウェアエンジニアとしてWebアプリケーションの開発に携わっています。
+        はじめまして、木村一翔です。ソフトウェアエンジニアとしてWebアプリケーションの開発に携わっています。
         ユーザーにとって使いやすく、美しいプロダクトを作ることに情熱を持っています。
       </p>
       <p>
@@ -711,10 +708,8 @@
       <div class="skills-grid">
         <div class="skill-tag">HTML / CSS</div>
         <div class="skill-tag">JavaScript</div>
-        <div class="skill-tag">TypeScript</div>
-        <div class="skill-tag">React</div>
-        <div class="skill-tag">Node.js</div>
-        <div class="skill-tag">Python</div>
+        <div class="skill-tag">Vue.js</div>
+        <div class="skill-tag">Ruby on Rails</div>
         <div class="skill-tag">Git</div>
         <div class="skill-tag">Docker</div>
       </div>
@@ -751,28 +746,21 @@
           <div class="icon">✉</div>
           <div>
             <div class="label">Email</div>
-            <div class="value"><a href="mailto:kazuto@example.com">kazuto@example.com</a></div>
+            <div class="value"><a href="mailto:kazuto@example.com">kimukimuok805@gmail.com</a></div>
           </div>
         </li>
         <li>
           <div class="icon">🐙</div>
           <div>
             <div class="label">GitHub</div>
-            <div class="value"><a href="#">github.com/kazuto-kimura</a></div>
-          </div>
-        </li>
-        <li>
-          <div class="icon">🔗</div>
-          <div>
-            <div class="label">LinkedIn</div>
-            <div class="value"><a href="#">linkedin.com/in/kazuto-kimura</a></div>
+            <div class="value"><a href="https://github.com/kimu805" target="_blank">github.com/kimu805</a></div>
           </div>
         </li>
         <li>
           <div class="icon">📍</div>
           <div>
             <div class="label">Location</div>
-            <div class="value">Tokyo, Japan</div>
+            <div class="value">Saitama, Japan</div>
           </div>
         </li>
       </ul>
